apps/base/docker-registry/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: osable
spec:
  type: ClusterIP
  selector:
    application: registry
  ports:
  - port: 5000
    targetPort: 5000
